<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Data storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="SignUp">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="i_have_an_existing_account_login_now">I have an existing account Login now</string>
    <string name="add_file">Add File</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="upload_file">Upload file</string>
    <string name="file_name">File name</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="storage">Storage</string>
    <string name="admin_gmail_com">Admin@gmail.com</string>
    <string name="free_storage">Free Storage</string>
    <string name="change_password">Change Password</string>
</resources>