<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/edtbtn"
    android:weightSum="3"
    android:layout_height="match_parent"
    tools:context=".SignupFG">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp">

        <TextView
            android:textAlignment="center"
            android:id="@+id/st_back_toLG"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1.8"
        android:gravity="center"
        android:padding="20dp"
        >


        <EditText
            android:id="@+id/EdtEmailLSU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/email"
            android:background="@drawable/edtbg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />



        <EditText
            android:id="@+id/EdtPasswordSu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EdtEmailLSU"
            android:layout_margin="10dp"
            android:autofillHints="@string/password"
            android:background="@drawable/edtbg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_below="@id/EdtPasswordSu"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/SignUp"
            android:background="@drawable/edtbtn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_below="@id/btnSignup"
            android:textAlignment="center"
            android:id="@+id/Txt_tooLogin"
            android:text="@string/i_have_an_existing_account_login_now"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#F4055C"
            android:layout_height="wrap_content"/>


    </RelativeLayout>




</LinearLayout>